--- a/package.json
+++ b/package.json
@@ -1,24 +1,38 @@
 {
-  "name": "proaddis",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.6",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "4.7.4"
-  }
+	"name": "proaddis",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"test": "jest --watch",
+		"test:ci": "jest --ci",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"next": "12.2.5",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@testing-library/dom": "^8.17.1",
+		"@testing-library/jest-dom": "^5.16.5",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "^14.4.3",
+		"@types/jest": "^28.1.7",
+		"@types/node": "18.7.6",
+		"@types/react": "18.0.17",
+		"@types/react-dom": "18.0.6",
+		"@types/testing-library__jest-dom": "^5.14.5",
+		"autoprefixer": "^10.4.8",
+		"eslint": "8.22.0",
+		"eslint-config-next": "12.2.5",
+		"jest": "^28.1.3",
+		"jest-environment-jsdom": "^28.1.3",
+		"postcss": "^8.4.16",
+		"sb": "^6.5.10",
+		"tailwindcss": "^3.1.8",
+		"typescript": "4.7.4"
+	}
 }
